--- a/nodejs.yml
+++ b/nodejs.yml
@@ -28,3 +28,8 @@
   sudo: yes
   shell: /usr/bin/make install chdir=/tmp/{{ node_prefix }}/
   when: wanted_version_installed.rc == 1
+---
+node_version: 4.1.2
+node_prefix: "node-v{{ node_version }}"
+node_tarball: "{{ node_prefix }}.tar.gz"
+node_path: "/usr/local"
