--- a/k8s.yml
+++ b/k8s.yml
@@ -1,66 +1,88 @@
-- name: Install Kubernetes
-  hosts: all
-  become: true
-
+---
+- name: Install Docker on Ubuntu
+  hosts: main
+  become: yes
   tasks:
-    - name: Install Docker
+    - name: Update APT package index
       apt:
-        name: "{{ item }}"
-        state: present
-      loop:
-        - apt-transport-https
-        - ca-certificates
-        - curl
-        - gnupg
-        - lsb-release
-      when: ansible_os_family == 'Debian'
+        update_cache: yes
 
-    - name: Add Kubernetes apt-key
+    - name: Install prerequisites
+      apt:
+        name:
+          - ca-certificates
+          - curl
+          - gnupg
+          - lsb-release
+        state: present
+
+    - name: Create Docker keyring directory
+      file:
+        path: /etc/apt/keyrings
+        state: directory
+        mode: '0755'
+
+    - name: Add Docker's official GPG key
+      shell: curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
+
+
+    - name: Add Docker repository to APT sources
+      apt_repository:
+        repo: "deb [arch=amd64] https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable"
+        state: present
+
+    - name: Update APT package index again
+      apt:
+        update_cache: yes
+
+    - name: Install Docker packages
+      apt:
+        name:
+          - docker-ce
+          - docker-ce-cli
+          - containerd.io
+          - docker-buildx-plugin
+          - docker-compose-plugin
+        state: present
+
+    - name: Add Kubernetes GPG key
       apt_key:
         url: https://packages.cloud.google.com/apt/doc/apt-key.gpg
-      when: ansible_os_family == 'Debian'
+        state: present
 
-    - name: Add Kubernetes apt repository
+    - name: Add Kubernetes APT repository
       apt_repository:
         repo: deb https://apt.kubernetes.io/ kubernetes-xenial main
         state: present
         filename: kubernetes.list
-      when: ansible_os_family == 'Debian'
 
     - name: Install Kubernetes components
       apt:
-        name: "{{ item }}"
+        name:
+          - kubelet
+          - kubeadm
+          - kubectl
         state: present
-      loop:
-        - kubelet
-        - kubeadm
-        - kubectl
-      when: ansible_os_family == 'Debian'
+    - name: Remove old Containerd
+      apt:
+        name: containerd
+        state: absent
 
-    - name: Initialize Kubernetes cluster
-      command: kubeadm init
-      args:
-        creates: /etc/kubernetes/admin.conf
-      when: inventory_hostname == groups['k8s_master'][0]
+    - name: Update repository data
+      apt:
+        update_cache: yes
 
-    - name: Copy kubeconfig file to user directory
-      copy:
-        src: /etc/kubernetes/admin.conf
-        dest: /home/{{ ansible_user }}/admin.conf
-        owner: "{{ ansible_user }}"
-        group: "{{ ansible_user }}"
-        mode: 0600
-      when: inventory_hostname == groups['k8s_master'][0]
+    - name: Install new Containerd
+      apt:
+        name: containerd.io
+        state: present
 
-    - name: Copy kubeconfig file to /etc/kubernetes
-      copy:
-        src: /home/{{ ansible_user }}/admin.conf
-        dest: /etc/kubernetes/admin.conf
-        owner: root
-        group: root
-        mode: 0644
-      when: inventory_hostname == groups['k8s_master'][0]
+    - name: Remove old config file
+      file:
+        path: /etc/containerd/config.toml
+        state: absent
 
-    - name: Install network add-on
-      command: kubectl apply -f https://docs.projectcalico.org/v3.18/manifests/calico.yaml
-      when: inventory_hostname == groups['k8s_master'][0]
+    - name: Restart Containerd
+      systemd:
+        name: containerd
+        state: restarted
